design: Temporarily fix main component alignment issue

--- a/front/components/modeSelect/modeSelect.module.css
+++ b/front/components/modeSelect/modeSelect.module.css
@@ -8,3 +8,7 @@
   color: rgb(82, 82, 204);
   cursor: pointer;
 }
+
+.btn {
+  margin-top: 2em;
+}
